--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@prisma/client": "^6.19.2",
     "dotenv": "^17.3.1",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "express-validator": "^7.2.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "prisma": "^6.19.2"
