--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,14 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "migrate": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy",
+    "studio": "prisma studio",
+    "postinstall": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +23,7 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "nodemon": "^3.1.9",
     "prisma": "^6.19.2"
   }
 }
