--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Messenger backend with WebSocket and SQLite",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "prisma migrate deploy && node server.js",
     "dev": "nodemon server.js",
     "migrate": "prisma migrate dev",
-    "migrate:deploy": "prisma migrate deploy",
     "studio": "prisma studio",
     "postinstall": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
