mod 2.0, mini reliz

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "messenger-backend",
   "version": "1.0.0",
-  "description": "Messenger server with WebSocket and SQLite",
+  "description": "Messenger server with WebSocket, SQLite and authentication",
   "main": "server.js",
   "bin": "server.js",
   "scripts": {
@@ -18,9 +18,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "bcrypt": "^5.1.1",
+    "connect-sqlite3": "^0.9.13",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "express-session": "^1.18.0",
     "express-validator": "^7.2.1",
+    "nodemailer": "^6.9.14",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
